--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <div id='header'>Quadgen v.1.1.</div>
         <div id='sub-header'>Quadratic equations generator.</div>
         <div id='description'>This website generates quadratic equations with rational roots.</div>
+        <div id='help-text'>Enter left and right edges of an interval that will be used for random coefficients generation.</div>
         <div id='edges-form'>
             <form name='edges'>
                 <label for='left-edge'>Left Edge</label>
@@ -19,8 +20,7 @@
             <input id='generate-button' style='margin: 10px;' type='button' value='Generate!' onclick="generateEquation()">   
         </div>
         <div id='equation'><span id='a-value'>A</span>x<sup>2</sup><span id='b-value'>+B</span>x<span id='c-value'>+C</span>=0</div>
-
-
+        <div class='footer'>Made by Ivan Ivanov</div>
 
         <script src='/js/index.js'></script>
     </body>
