--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
         <div id='header'>Quadgen v.1.1.</div>
         <div id='sub-header'>Quadratic equations generator.</div>
         <div id='description'>This website generates quadratic equations with rational roots.</div>
-        <div id='help-text'>Enter left and right edges of an interval that will be used for random coefficients generation.</div>
+        <div id='help-text'>
+            Enter left and right edges of an interval that will be used for random coefficients generation.<br>
+            But make sure that the left edge is lower than -2 and the right edge is higher than +2, otherwise generating won't be able.
+        </div>
         <div id='edges-form'>
             <form name='edges'>
                 <label for='left-edge'>Left Edge</label>
